# public/files/swagger/swagger.yaml
@@ -15,6 +15,8 @@ tags:
     description: "Authentication operations"
   - name: "user"
     description: "User operations"
+  - name: "service"
+    description: "Service operations"
 schemes:
   - "http"
 paths:
@@ -87,6 +89,27 @@ paths:
           description: "User Balance"
           required: true
           type: "number"
+      security:
+        - JWT: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            "$ref": "#/definitions/ApiResponse"
+        "429":
+          description: "Too Many Request"
+          schema:
+            "$ref": "#/definitions/ApiResponse"
+  /services:
+    get:
+      tags:
+        - "service"
+      summary: "Fetch all service list"
+      description: ""
+      operationId: "service-index"
+      produces:
+        - "application/json"
+      parameters: []
       security:
         - JWT: []
       responses:
